change workflow of charged

--- a/automations.yaml
+++ b/automations.yaml
@@ -127,4 +127,15 @@
     - service: switch.turn_on
       data:
         entity_id: switch.prise_garage
+          
+- id: car_charged
+  alias: Voiture chargée
+  trigger:
+    platform: state
+    entity_id: sensor.garage_plug
+    to: 'Chargée'
+  action:
+    - service: switch.turn_off
+      data:
+        entity_id: switch.prise_garage
 
