--- a/sensor.yaml
+++ b/sensor.yaml
@@ -60,11 +60,11 @@
         {% endif %}
       value_template: >-
         {% if is_state('switch.prise_garage', 'off') %}
-          Eteint
-        {% elif states('sensor.prise_garage')|float > 2000 %}
-          Voiture
+          Eteint        
         {% elif states('sensor.prise_garage')|float == 0 %}
           Attente
-        {% else %}
+        {% elif states('sensor.prise_garage')|float > 2000 %}
+          Voiture
+        {% elif states('sensor.garage_plug', 'Voiture') and  elif states('sensor.prise_garage')|float < 1000 %}
           Chargée
         {% endif %}        
