--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,9 +21,9 @@ http:
   # Secrets are defined in the file secrets.yaml
   api_password: !secret http_password
   base_url: !secret base_url
-  #ssl_certificate: /ssl/fullchain.pem
-  #ssl_key: /ssl/privkey.pem
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
+  ssl_certificate: /ssl/fullchain.pem
+  ssl_key: /ssl/privkey.pem
 
 # Checks for available updates
 # Note: This component will send some information about your system to
