--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -1,9 +1,13 @@
-  night_mode:
-    name: Mode nuit
-    icon: mdi:weather-night
-  away_mode:
-    name: Absence
-    icon: mdi:account-remove
-  holiday_mode:
-    name: Congés
-    icon: mdi:sunglasses
+night_mode:
+  name: Mode nuit
+  icon: mdi:weather-night
+away_mode:
+  name: Absence
+  icon: mdi:account-remove
+holiday_mode:
+  name: Congés
+  icon: mdi:sunglasses
+
+garage_charging:
+  name: En charge
+  icon: mdi:battery-charging-30
