--- a/sensor.yaml
+++ b/sensor.yaml
@@ -43,21 +43,23 @@
     garage_plug:
       unit_of_measurement: charge
       friendly_name: Garage
-      icon_template: >-
-        {% if is_state('swicth.prise_garage', 'off') %}
-          mdi:power-plug-off
-        {% elif states('sensor.prise_garage')|float > 2000 %}
-          mdi:battery-charging-30
-        {% else %}
-          mdi:battery-charging
-        {% endif %}
+      # icon_template: >-
+      #   {% if is_state('swicth.prise_garage', 'off') %}
+      #     mdi:power-plug-off
+      #   {% elif states('sensor.prise_garage')|float > 1500 %}
+      #     mdi:battery-charging-30
+      #   {% else %}
+      #     mdi:battery-charging
+      #   {% endif %}
       value_template: >-
         {% if is_state('switch.prise_garage', 'off') %}
           Off        
-        {% elif states('sensor.prise_garage')|float > 2000 %}
-          Voiture
-        {% elif states('sensor.garage_plug', 'Voiture') and states('sensor.prise_garage')|float < 1000 %}
-          Chargée
+        {% elif is_state('input_boolean.garage_charging','true') %}          
+          {% if states('sensor.prise_garage')|float > 1500 %}
+            Voiture
+          {% else %}
+            Attente
+          {% endif %}         
         {% else %}
           On
         {% endif %}
