--- a/input_number.yaml
+++ b/input_number.yaml
@@ -6,3 +6,11 @@ elec_price:
     min: 0
     max: 1
     step: 0.001
+
+tv_timer:
+  name: Minuteur
+  icon: mdi:timer
+  min: 0
+  max: 90
+  unit_of_measurement: min
+  step: 1
