--- a/automations.yaml
+++ b/automations.yaml
@@ -127,6 +127,8 @@
     - service: switch.turn_on
       data:
         entity_id: switch.prise_garage
+    - delay: 00:05:00
+    - service: script.eteindre_prise_garage
 
 - id: car_charging
   alias: Recharge voiture
