--- a/input_number.yaml
+++ b/input_number.yaml
@@ -20,6 +20,7 @@ sunset_offset:
   name: Offset couché de soleil
   icon: mdi:timer
   mode: box
+  initial: 20
   min: -60
   max: 60
   unit_of_measurement: min
