--- a/configuration.yaml
+++ b/configuration.yaml
@@ -22,8 +22,8 @@ http:
   api_password: !secret http_password
   base_url: !secret base_url
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  #ssl_certificate: /ssl/fullchain.pem
-  #ssl_key: /ssl/privkey.pem
+  ssl_certificate: /ssl/fullchain.pem
+  ssl_key: /ssl/privkey.pem
 
 # Checks for available updates
 # Note: This component will send some information about your system to
