--- a/configuration.yaml
+++ b/configuration.yaml
@@ -81,6 +81,12 @@ switch:
 tts:
   - platform: google
 
+notify:
+  - name: html5
+    platform: html5
+    gcm_api_key: !secret gcm_api_key
+    gcm_sender_id: !secret gcm_sender_id
+
 # Cloud
 cloud:
 
