--- a/automations.yaml
+++ b/automations.yaml
@@ -74,7 +74,7 @@
   alias: Départ
   trigger:
     platform: template
-    value_template: "{{ is_state('device_tracker.honor_marc', 'not_home') and is_state('device_tracker.honor_eva', 'not_home') and is_state('switch.neo_coolcam_power_plug_12a_switch_2', 'off') }}"
+    value_template: "{{not (is_state('device_tracker.honor_marc', 'home') or is_state('device_tracker.honor_eva', 'home')) and is_state('switch.neo_coolcam_power_plug_12a_switch_2', 'off') }}"
   action:
     - service: input_boolean.turn_on
       data:
