--- a/groups.yaml
+++ b/groups.yaml
@@ -2,6 +2,7 @@ default_view:
   view: yes
   icon: mdi:home 
   entities:    
+    - sensor.dark_sky_apparent_temperature
     - sensor.fibaro_system_fgms001_motion_sensor_temperature
     - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
     - device_tracker.honor_marc
@@ -68,7 +69,20 @@ meteo:
   view: yes
   icon: mdi:weather-partlycloudy
   entities:
-    - weather.meteo
+    - group.darksky_sensors
+
+darksky_sensors:
+  name: Conditions
+  view: no
+  entities:
+    - sensor.dark_sky_apparent_temperature
+    - sensor.dark_sky_cloud_coverage
+    - sensor.dark_sky_daily_high_temperature
+    - sensor.dark_sky_daily_low_temperature
+    - sensor.dark_sky_humidity
+    - sensor.dark_sky_precip_probability
+    - sensor.dark_sky_temperature
+    - sensor.dark_sky_wind_speed
 
 equipement:
   view: yes
