--- a/groups.yaml
+++ b/groups.yaml
@@ -69,12 +69,15 @@ meteo:
   view: yes
   icon: mdi:weather-partlycloudy
   entities:
-    - group.darksky_sensors
+    - group.weather_today
+    - group.weather_tomorrow
+    - group.weather_after_tomorrow
 
-darksky_sensors:
-  name: Conditions
+weather_today:
+  name: Aujourd'hui
   view: no
   entities:
+    - sensor.dark_sky_summary
     - sensor.dark_sky_apparent_temperature
     - sensor.dark_sky_cloud_coverage
     - sensor.dark_sky_daily_high_temperature
@@ -83,6 +86,26 @@ darksky_sensors:
     - sensor.dark_sky_precip_probability
     - sensor.dark_sky_temperature
     - sensor.dark_sky_wind_speed
+weather_tomorrow:
+  name: Demain
+  view: no
+  entities:
+    - sensor.dark_sky_cloud_coverage_1
+    - sensor.dark_sky_daily_high_temperature_1
+    - sensor.dark_sky_daily_low_temperature_1
+    - sensor.dark_sky_humidity_1
+    - sensor.dark_sky_precip_probability_1
+    - sensor.dark_sky_wind_speed_1
+weather_after_tomorrow:
+  name: Après demain
+  view: no
+  entities:
+    - sensor.dark_sky_cloud_coverage_2
+    - sensor.dark_sky_daily_high_temperature_2
+    - sensor.dark_sky_daily_low_temperature_2
+    - sensor.dark_sky_humidity_2
+    - sensor.dark_sky_precip_probability_2
+    - sensor.dark_sky_wind_speed_2
 
 equipement:
   view: yes
