--- a/sensor.yaml
+++ b/sensor.yaml
@@ -43,14 +43,6 @@
     garage_plug:
       unit_of_measurement: charge
       friendly_name: Garage
-      # icon_template: >-
-      #   {% if is_state('swicth.prise_garage', 'off') %}
-      #     mdi:power-plug-off
-      #   {% elif states('sensor.prise_garage')|float > 1500 %}
-      #     mdi:battery-charging-30
-      #   {% else %}
-      #     mdi:battery-charging
-      #   {% endif %}
       value_template: >-
         {% if is_state('switch.prise_garage', 'off') %}
           Off        
@@ -63,6 +55,24 @@
         {% else %}
           On
         {% endif %}
+    value_day_car_charge:
+      friendly_name: Durée de recharge
+      icon_template: mdi:timer-sand
+      value_template: "{{ states.sensor.day_car_charge.attributes.value }}"
+    value_month_car_charge:
+      friendly_name: Durée mensuelle
+      icon_template: mdi:timer-sand
+      value_template: "{{ states.sensor.month_car_charge.attributes.value }}"
+    price_day_car_charge:
+      friendly_name: Coût de recharge
+      unit_of_measurement: €
+      icon_template: mdi:currency-eur
+      value_template: "{{states.sensor.day_car_charge.state|float * states.input_number.elec_price.state|float * 2.3}}"
+    price_month_car_charge:
+      friendly_name: Coût de recharge mensuel
+      icon_template: mdi:currency-eur
+      unit_of_measurement: €
+      value_template: "{{states.sensor.month_car_charge.state|float * states.input_number.elec_price.state|float * 2.3}}"
 
 - platform: darksky
   api_key: !secret darksky_api_key
