--- a/sensor.yaml
+++ b/sensor.yaml
@@ -81,6 +81,17 @@
       friendly_name: Lever du soleil
       icon_template: mdi:weather-sunset-up
       value_template: "{{ as_timestamp(states.sun.sun.attributes.next_rising) | timestamp_custom('%d/%m/%Y %H:%M',true)}}"
+    smoke_sensor_upstair_battery:
+      value_template: "{{states.zwave.fibaro_system_fgsd002_smoke_sensor.attributes.battery_level}}"
+      unit_of_measurement: '%'
+      icon_template: >-
+        {% if states.zwave.fibaro_system_fgsd002_smoke_sensor.attributes.battery_level|int < 10 %}
+          mdi:battery-alert
+        {% elif is_state_attr('zwave.fibaro_system_fgsd002_smoke_sensor', 'battery_level', 100) %}
+          mdi:battery
+        {% else %}
+          mdi:battery-{{(states.zwave.fibaro_system_fgsd002_smoke_sensor.attributes.battery_level|int // 10) * 10}}
+        {% endif %}
 
 - platform: darksky
   api_key: !secret darksky_api_key
