--- a/sensor.yaml
+++ b/sensor.yaml
@@ -114,6 +114,14 @@
   update_interval: '00:05'
 
 - platform: history_stats
+  name: month_count_car_charge
+  entity_id: input_boolean.garage_charging
+  state: 'on'
+  type: count
+  start: '{{ now().replace(day=1).replace(hour=0).replace(minute=0).replace(second=0) }}'
+  end: '{{ now() }}'
+
+- platform: history_stats
   name: month_car_charge
   entity_id: input_boolean.garage_charging
   state: 'on'
