--- a/input_number.yaml
+++ b/input_number.yaml
@@ -16,12 +16,12 @@ tv_timer:
   unit_of_measurement: min
   step: 1
 
-sunset_offset:
-  name: Offset couché de soleil
-  icon: mdi:timer
+cloud_treshold:
+  name: Seuil couverture nuageuse
+  icon: mdi:weather-partlycloudy
   mode: box
-  initial: 20
-  min: -60
-  max: 60
-  unit_of_measurement: min
+  initial: 50
+  min: 0
+  max: 100
+  unit_of_measurement: '%'
   step: 1
