--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,6 +8,8 @@ homeassistant:
   # Customization file
   customize: !include customize.yaml
   customize_glob: !include customize_glob.yaml
+  whitelist_external_dirs:
+    - /config/tmp
 # Show links to resources in log and frontend
 # introduction:
 
