--- a/configuration.yaml
+++ b/configuration.yaml
@@ -66,7 +66,7 @@ recorder:
       - sensor.fibaro_system_fgms001_motion_sensor_temperature
       - sensor.fibaro_system_fgsd002_smoke_sensor_temperature
       - binary_sensor.fibaro_system_fgms001_motion_sensor_sensor
-      - sensor.prise_garage
+      - sensor.broadlink_spx_power_sensor
       - switch.prise_garage
       - sensor.speedtest_download
       - sensor.speedtest_upload
