--- a/configuration.yaml
+++ b/configuration.yaml
@@ -123,6 +123,12 @@ switch:
     type: sp3
     friendly_name: Prise garage
 
+media_player:
+  - platform: cast
+    host: 192.168.0.40
+  - platform: cast
+    host: 192.168.0.41
+
 # Text to speech
 tts:
   - platform: google
