--- a/automations.yaml
+++ b/automations.yaml
@@ -79,18 +79,6 @@
     - service: input_boolean.turn_on
       data:
         entity_id: input_boolean.away_mode
-    - service: switch.turn_on
-      data:
-        entity_id: switch.neo_coolcam_power_plug_12a_switch_2
-    - service: notify.html5
-      data:
-        title: "Home Assistant"
-        message: "Vous partez ?"
-        actions:
-          - action: "activate"
-            title: "Activer"
-          - action: "deactivate"
-            title: "Desactiver"
 
 - id: coming_home
   alias: Retour
@@ -183,8 +171,8 @@
         message: "Stopping !"
         title: "HomeAssistant"
 
-- id: notify_away
-  alias: Notification absence
+- id: away_mode_activate
+  alias: Absence activée
   trigger:
     - platform: state
       entity_id: input_boolean.away_mode
@@ -195,6 +183,12 @@
       data:
         title: "Home Assistant"
         message: "Absence activée"
+    - service: switch.turn_on
+      data:
+        entity_id: switch.neo_coolcam_power_plug_12a_switch_2    
+    - service: homeassistant.turn_off
+      data:
+        entity_id: group.all_lights
 
 - id: presence_detection
   alias: Detection de présence
