--- a/configuration.yaml
+++ b/configuration.yaml
@@ -38,6 +38,8 @@ updater:
 
 # Discover some devices automatically
 discovery:
+  ignore:
+    - google_cast
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
